refactor: tighten code standard alignment across core layers